WK2 leaks when a page is closed https://bugs.webkit.org/show_bug.cgi?id=53100

Reviewed by Darin Adler.

Allow the WKView a chance to clean up on a page close. In this case,
cleaning up means removing the references the accessibility token has
to the window.

* UIProcess/API/mac/PageClientImpl.h:
* UIProcess/API/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::pageClosed):
* UIProcess/API/mac/WKView.mm:
(-[WKView _setRemoteAccessibilityWindow:]):
(-[WKView _setAccessibilityChildToken:]):
(-[WKView _processDidCrash]):
(-[WKView _pageClosed]):
* UIProcess/API/mac/WKViewInternal.h:
* UIProcess/API/qt/qwkpage_p.h:
(QWKPagePrivate::pageClosed):
* UIProcess/PageClient.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::close):
* UIProcess/win/WebView.cpp:
(WebKit::WebView::pageClosed):
* UIProcess/win/WebView.h:



Canonical link: https://commits.webkit.org/66881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76657 268f45cc-cd09-0410-ab3c-d52691b4dbfc