Source/WebKit2/UIProcess/win/WebView.cpp
@@ -626,6 +626,10 @@ bool WebView::isViewInWindow()
     return m_isInWindow;
 }
 
+void WebView::pageClosed()
+{
+}
+
 void WebView::processDidCrash()
 {
     updateNativeCursor();
